# hypabase

./: .gitignore  .vale.ini  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  context7.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
0.1.0/: 404.html  index.html  index.md  llms-full.txt  llms.txt  objects.inv  robots.txt  sitemap.xml
0.1.0/comparisons/vs-mem0/: index.html  index.md
0.1.0/comparisons/vs-neo4j/: index.html  index.md
0.1.0/comparisons/vs-vector-dbs/: index.html  index.md
0.1.0/concepts/: index.html  index.md
0.1.0/examples/agent-memory/: index.html
0.1.0/examples/hybrid-vector/: index.html  index.md
0.1.0/examples/medical-kg/: index.html
0.1.0/getting-started/: index.html  index.md
0.1.0/guides/cli/: index.html  index.md
0.1.0/search/: search_index.json
0.1.1/: index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
0.1.1/concepts/: index.html  index.md
0.1.1/getting-started/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  index.md  llms-full.txt  robots.txt
0.1.2/search/: search_index.json
0.1.2/stylesheets/: extra.css
docs/: concepts.md  getting-started.md  index.md  robots.txt
docs/comparisons/: vs-hypernetx.md  vs-mem0.md  vs-neo4j.md  vs-networkx.md  vs-vector-dbs.md
docs/examples/: agent-memory.md  hybrid-vector.md  medical-kg.md  rag-extraction.md
docs/guides/: batch-operations.md  cli.md  hif.md  hybrid-vector-search.md  knowledge-graphs.md  mcp.md  provenance.md  traversal.md
docs/reference/: cli.md  client.md  models.md
hypabase/: __init__.py  client.py  models.py
hypabase/cli/: main.py
hypabase/engine/: __init__.py  core.py  db.py  persistence.py  storage.py
hypabase/mcp/: __init__.py  __main__.py  server.py
overrides/: main.html
styles/Hypabase/: AIFiller.yml  AIHedging.yml  AIOpeners.yml  Superlatives.yml  Wordiness.yml
tests/: conftest.py  test_client.py  test_engine_cograg.py  test_engine_core.py  test_engine_db.py  test_engine_hif.py  test_engine_threads.py  test_engine_utilities.py  test_mcp.py  test_readme_examples.py  test_use_cases.py
tests/benchmarks/: __init__.py  conftest.py  test_perf_basic_ops.py  test_perf_path_finding.py  test_perf_scaling.py
(+46 files in other folders)
